# LSOracle

./: .gitmodules
core/: CMakeLists.txt  lsoracle.cpp
core/algorithms/optimization/: resynthesis.cpp  resynthesis.hpp
core/algorithms/partitioning/: hyperg.hpp  kahypar_partitioner.hpp  partition_manager_junior.hpp
core/commands/: version.hpp
core/commands/optimization/: oracle.hpp  refactor.hpp
core/commands/output/: write_gblif.hpp  write_verilog.hpp
core/commands/partitioning/: kahypar.hpp
lib/: CMakeLists.txt
lib/OpenSTA/network/: ConcreteNetwork.cc
lib/OpenSTA/tcl/: Util.tcl
lib/alice/lib/: CMakeLists.txt
lib/dagP/: CMakeLists.txt
lib/dagP/src/: useapi.cpp
lib/kahypar/: .gitignore  CMakeLists.txt
lib/kahypar/lib/: CMakeLists.txt
lib/mockturtle/: .gitignore
lib/mockturtle/include/mockturtle/: mockturtle.hpp
lib/mockturtle/include/mockturtle/algorithms/: balancing.hpp  cleanup.hpp  cut_rewriting.hpp  xag_optimization.hpp  xmg_optimization.hpp
lib/mockturtle/include/mockturtle/algorithms/node_resynthesis/: mig_npn.hpp
lib/mockturtle/include/mockturtle/io/: write_blif.hpp  write_dot.hpp  write_gblif.hpp  write_ports.hpp  write_verilog.hpp
lib/mockturtle/include/mockturtle/networks/: mig.hpp  xmg.hpp
lib/mockturtle/include/mockturtle/utils/: node_map.hpp
lib/mockturtle/include/mockturtle/views/: depth_view.hpp  mffc_view.hpp  names_view.hpp  window_view.hpp
yosys-plugin/: oracle.cc
